manifests/prd/blackbox-exporter/Deployment-blackbox-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: blackbox-exporter
    app.kubernetes.io/name: prometheus-blackbox-exporter
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: blackbox-exporter
      app.kubernetes.io/name: prometheus-blackbox-exporter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 52cdf38f1554cf73706e00a252390b75921218427395cb48128910244ec658a0
      labels:
        app.kubernetes.io/instance: blackbox-exporter
        app.kubernetes.io/name: prometheus-blackbox-exporter
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --config.file=/config/blackbox.yaml
          image: quay.io/prometheus/blackbox-exporter:v0.28.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /-/healthy
              port: http
          name: blackbox-exporter
          ports:
            - containerPort: 9115
              name: http
          readinessProbe:
            httpGet:
              path: /-/healthy
              port: http
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /config
              name: config
      hostNetwork: false
      restartPolicy: Always
      serviceAccountName: blackbox-exporter
      volumes:
        - configMap:
            name: blackbox-exporter
          name: config
