manifests/prd/blackbox-exporter/Service-blackbox-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: blackbox-exporter
    app.kubernetes.io/name: prometheus-blackbox-exporter
  name: blackbox-exporter
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 9115
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: blackbox-exporter
    app.kubernetes.io/name: prometheus-blackbox-exporter
  type: ClusterIP
