manifests/prd/blackbox-exporter/CiliumNetworkPolicy-blackbox-exporter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  egress:
    - toCIDR:
        - 10.0.30.126/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
